[package]
name = "bevy_forms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_forms_macros = { path = "macros"}
bevy_hierarchy = { version = "0.7" }
bevy_render = { version = "0.7" }
bevy_window = { version = "0.7" }
bevy_asset = { version = "0.7" }
bevy_input = { version = "0.7" }
bevy_math = { version = "0.7" }
bevy_text = { version = "0.7" }
bevy_app = { version = "0.7" }
bevy_ecs = { version = "0.7" }
bevy_ui = { version = "0.7" }
tracing = { version = "0.1" }
uuid = { version = "1", features = ["v4", "fast-rng"]}

[dev-dependencies]
bevy = { version = "0.7" }